--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "author": "Amul Agrawal",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^6.4.6",
     "nodemon": "^2.0.18"
   }
