--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,12 @@
   "author": "Amul Agrawal",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "mongoose": "^6.4.6",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18"
   }
 }
